Update TC and TS

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,2 +1,14 @@
-#Sun Dec 12 03:40:58 EST 2021
+#Sun Dec 12 20:06:36 EST 2021
 execution.default.smartWaitMode=false
+execution.launch.vmArgs=""
+show-Profiles=true
+show-Test\ Cases=true
+show-Object\ Repository=true
+show-Test\ Suites=true
+show-Data\ Files=true
+show-Checkpoints=true
+show-Keywords=true
+show-Test\ Listeners=true
+show-Reports=true
+show-Include=true
+show-Plugins=true
